HHwluuGhxgUFQKOU9U3GrURATb+27Mhvya6tWGtcb5xpcyEiWjraHWiYD3EKdXnW
06630000000423354556510236637735310112444264707007012776301051626404210525327730216361167505302504444647301542117105427056622235

[sha384:xxencode|brotli:hex]

--- a/docs/_layouts/stele.html
+++ b/docs/_layouts/stele.html
@@ -25,7 +25,7 @@
     <!-- Navigation -->
     <nav class="glyphs-nav">
       <a href="{{ '/' | relative_url }}" {% if page.url == '/' %}class="active"{% endif %}>Home</a>
-      <a href="{{ '/stele' | relative_url }}" {% if page.url contains 'stele.html' or page.title == 'stele' %}class="active"{% endif %}>Spec</a>
+      <a href="{{ '/spec' | relative_url }}" {% if page.url == '/spec/' or page.title == 'stele' %}class="active"{% endif %}>Spec</a>
       <a href="https://github.com/coryzibell/base-d" target="_blank">GitHub</a>
     </nav>
 
