--- a/docs/_layouts/stele.html
+++ b/docs/_layouts/stele.html
@@ -6,7 +6,7 @@
   <meta name="description" content="{{ page.description | default: site.description }}">
   <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>&#x133BD;</text></svg>">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>ᚠ</text></svg>">
 </head>
 <body>
 
@@ -15,9 +15,9 @@
     <!-- Cartouche Header -->
     <header class="cartouche-header">
       <div class="title-cartouche">
-        <span class="glyph">&#x1339D;</span>
+        <span class="glyph">ᚠ</span>
         <h1>STELE</h1>
-        <span class="glyph">&#x1339E;</span>
+        <span class="glyph">ᚣ</span>
       </div>
       <p class="subtitle">Structured Tablets for LLM Encoding</p>
     </header>
